css: scrollbar fix

--- a/css/main.css
+++ b/css/main.css
@@ -206,6 +206,10 @@
     }
 }
 
+.Skin #Questions {
+    overflow: visible;
+}
+
 /* Questions */
 
 .Skin .QuestionOuter {
